[package]
name = "nanotots"
version = "0.1.0"
edition = "2021"
authors = ["Dawid <jordaandvd@gmail.com>"]
description = "A cli time parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.1.9", features = ["cargo"]}
chrono = "*"
